Note add component form done

--- a/src/app/note-add/note-add.component.html
+++ b/src/app/note-add/note-add.component.html
@@ -1,1 +1,31 @@
-<p>note-add works!</p>
+<div class="form-container">
+    <form #noteForm="ngForm" (ngSubmit)="onSubmit(noteForm)">
+        <div class="field">
+            <label class="label">Title</label>
+            <div class="control">
+                <input type="text" name="title" class="input" [ngModel]="note.title">
+            </div>
+        </div>
+
+        <br>
+
+        <div class="field">
+            <label class="label">Body</label>
+            <div class="control">
+                <textarea class="textarea" name="body" [ngModel]="note.body"></textarea>
+            </div>
+        </div>
+
+        <div class="field">
+            <div class="control">
+                <button class="button" type="button">Cancel</button>
+            </div>
+            <div class="control">
+                <button class="button is-sucess" type="submit">Save</button>
+            </div>
+
+        </div>
+
+
+    </form>
+</div>
