--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <a routerLink="/note-add-component" routerLinkActive="active" ariaCurrentWhenActive="page">
+  <a routerLink="/note-list-component" routerLinkActive="active" ariaCurrentWhenActive="page">
     <img src="assets/angular-logo.png">
   </a>
   <button class="header-note-add-button" routerLink="/note-add-component" nz-button nzType="primary">Not Ekle</button>
