--- a/src/app/note-add/note-add.component.html
+++ b/src/app/note-add/note-add.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="field">
-            <button class="button" type="button">Cancel</button>
+            <button class="button" type="button" (click)="cancel()">Cancel</button>
             <button class="button is-sucess" type="submit">Save</button>
         </div>
     </form>
