--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -2,6 +2,6 @@
   <a routerLink="/note-list-component" routerLinkActive="active" ariaCurrentWhenActive="page">
     <img src="assets/angular-logo.png">
   </a>
-  <button class="header-note-add-button" routerLink="/note-add-component" nz-button nzType="primary">Not Ekle</button>
+  <button class="header-note-add-button" routerLink="/new" nz-button nzType="primary">Not Ekle</button>
 </div>
 
