--- a/src/app/note-list/note-list.component.css
+++ b/src/app/note-list/note-list.component.css
@@ -3,6 +3,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 50%;
+    padding: 20px 20px;
   }
   
   /* On mouse-over, add a deeper shadow */
