--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -1,6 +1,6 @@
-<div class="card">
-    <div *ngFor="let note of notes" class="container">
-      <h4><b>{{note.title}}</b></h4>
-      <p>{{note.body}}</p>
-    </div>
-  </div>
+ <div *ngFor="let note of notes; index as i"  class="container">
+        <div class="card" [routerLink]="[i]">
+            <h4><b>{{note.title}}</b></h4>
+            <p>{{note.body}}</p>
+        </div>
+ </div>
